[package]
name = "pest-viewer"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Visualize ast for pest"
repository = "https://github.com/oovm/pest-viewer"
documentation = "https://docs.rs/pest-viewer"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
pest = "2.7.4"
pest_meta = "2.7.4"
pest_vm = "2.7.4"
svg = "0.14.0"

[dependencies.shape-svg]
version = "0.0.*"

[dependencies.tree-layout]
version = "0.0.*"


[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
